# mo-stock-watch

./: .gitignore  Cargo.toml  LICENSE  README.md  run-release.bat  start-mo-stock-watch.bat
docs/: DEVELOPMENT.md  OCR.md  RELEASE.md  USAGE.md
src/: ai.rs  app.rs  config.rs  main.rs  ocr.rs  portfolio.rs  quote.rs
