[package]
name = "mo-stock-watch"
version = "0.1.7"
edition = "2021"

[dependencies]
anyhow = "1"
arboard = "3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
eframe = { version = "0.31", features = ["persistence"] }
egui_extras = "0.31"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
